# TextCommunicator

./: CMakeLists.txt  README.md
Client/Inc/: ChannelThread.h  Client.h  CurrentUser.h  IClient.h  Interface.h  MessagesQueues.h  MessagesThread.h  RecieveThread.h  SendThread.h  Sender.h  Session.h  TextUserInterface.h
Client/Src/: ChannelThread.cpp  Client.cpp  CurrentUser.cpp  Interface.cpp  MessagesQueues.cpp  MessagesThread.cpp  RecieveThread.cpp  SendThread.cpp  Sender.cpp  Session.cpp  TextUserInterface.cpp  main.cpp
Inc/: ISocket.h  MyQueue.cpp  MyQueue.h  Socket.h  Thread.h  protocol.h
Server/Inc/: Admin.h  Channel.h  CommandParser.h  IChannel.h  IServer.h  IUser.h  Logger.h  ReceiverRegisterThread.h  Server.h  ServerSession.h  ServerThread.h  User.h  Validator.h
Server/Src/: Admin.cpp  Channel.cpp  CommandParser.cpp  IUser.cpp  Logger.cpp  ReceiverRegisterThread.cpp  Server.cpp  ServerSession.cpp  ServerThread.cpp  User.cpp  Validator.cpp  main.cpp
Src/: ISocket.cpp  Socket.cpp  Thread.cpp
